--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,6 @@ img {
   color: #ffff00;
 }
 #contact {
-  height: 500px;
   background-color: #233237;
 }
 
@@ -91,9 +90,37 @@ p {
 }
 
 .contactInfo {
-  text-align: center;
   font-size: 25px;
   padding-top: 15px;
+  color: white;
+}
+.contactInput{
+  border-radius: 5px;
+}
+
+.submitBtn{
+  border-radius: 5px;
+  font-size: 25px;
+  padding: 10px 20px;
+  color: white;
+}
+
+.btnDisabled{
+  background-color: gray;
+
+}
+
+.btnEnabled{
+  background-color: #33ff00;
+}
+
+.input-container{
+  margin-top: 15px;
+}
+
+.betaInfo{
+  font-style: italic;
+  font-size: 15px;
 }
 
 .footerItems {
